Bug 718625 - Implement TextLeaf accessibles for Mac. Fix Heading title. r=tbsaunde