accessible/src/mac/AccessibleWrap.mm
@@ -89,10 +89,12 @@ AccessibleWrap::GetNativeType ()
     case roles::STATICTEXT:
     case roles::CAPTION:
     case roles::ACCEL_LABEL:
-    case roles::TEXT_LEAF:
     case roles::PASSWORD_TEXT:
       // normal textfield (static or editable)
-      return [mozTextAccessible class]; 
+      return [mozTextAccessible class];
+
+    case roles::TEXT_LEAF:
+      return [mozTextLeafAccessible class];
 
     case roles::LINK:
       return [mozLinkAccessible class];
