accessible/src/mac/mozHTMLAccessible.mm
@@ -13,6 +13,17 @@
 
 @implementation mozHeadingAccessible
 
+- (NSString*)title
+{
+  nsAutoString title;
+  // XXX use the flattening API when there are available
+  // see bug 768298
+  nsresult rv = mGeckoAccessible->GetContent()->GetTextContent(title);
+  NS_ENSURE_SUCCESS(rv, nil);
+
+  return nsCocoaUtils::ToNSString(title);
+}
+
 - (id)value
 {
   if (!mGeckoAccessible || !mGeckoAccessible->IsHyperText())
