accessible/src/mac/mozTextAccessible.h
@@ -14,3 +14,8 @@
   nsIAccessibleEditableText *mGeckoEditableTextAccessible; // strong
 }
 @end
+
+@interface mozTextLeafAccessible : mozAccessible
+{
+}
+@end
